testsuite/tests/typecheck/should_fail/tcfail160.stderr

tcfail160.hs:7:8: error:
    The first argument of ‘T’ should have kind ‘* -> *’,
      but ‘Int’ has kind ‘*’
    In the type signature: g :: T Int
